<?xml version="1.0"?>
<package format="2">
  <name>rtabmap_rviz_plugins</name>
  <version>0.21.5</version>
  <description>RTAB-Map's rviz plugins.</description>
  <maintainer email="matlabbe@gmail.com">Mathieu Labbe</maintainer>
  <author>Mathieu Labbe</author>
  <license>BSD</license>
  <url type="bugtracker">https://github.com/introlab/rtabmap_ros/issues</url>
  <url type="repository">https://github.com/introlab/rtabmap_ros</url>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>pcl_conversions</depend>
  <depend>pluginlib</depend>
  <depend>roscpp</depend>
  <depend>rtabmap_conversions</depend>
  <depend>rtabmap_msgs</depend>
  <depend>rviz</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>tf</depend>

  <export>
    <rviz plugin="${prefix}/rviz_plugins.xml"/>
  </export>
</package>
